--- a/style/login.css
+++ b/style/login.css
@@ -8,24 +8,40 @@ body{
     justify-content: center;
     align-items: center;
     background: url("../images/bg.png") no-repeat center / cover;
+    
 }
 
 .form{
-    width: 400px;
-    background: #f8ecdd;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 400px;
+    width: 100%;
+    background-color: #f8ecdd;
     border-radius: 10px;
     padding: 30px;
     padding-top: 0;
+    
+}
+.form.signup{
+    opacity: 0;
+    pointer-events: none;
+}
+.forms.show-signup .form.signup{
+    opacity: 1;
+    pointer-events: auto;
+}
+.forms.show-signup .form.show-signin{
+    opacity: 0;
+    pointer-events: none;
 }
 .form h1 img{
     width: 100%;
     height: 100%;
     vertical-align: middle;
-    /* aspect-ratio: 313/47; */
 }
 .form form{
-    /* width: 100%;
-    height: 100%; */
     text-align: center;
 }
 .form h2{
@@ -36,6 +52,15 @@ body{
 }
 .form .input-field{
     margin-bottom: 24px;
+    position: relative;
+}
+.form .input-field .hide-icon{
+    font-size: 20px;
+    color: #9f9a91;
+    position: absolute;
+    top: 30%;
+    right: 5%;
+    vertical-align: middle;
 }
 .form .input-field label{
     text-align: left;
@@ -53,6 +78,7 @@ body{
     font-size: 16px;
     color: #9f9a91;
 }
+
 .form a, .form span{
     font-size: 14px;
     font-weight: 700;
