--- a/style/rwd.css
+++ b/style/rwd.css
@@ -1,3 +1,6 @@
+:root{
+    --col-gap: 32px
+}
 .container{
     max-width: 720px;
     margin: 0 auto;
@@ -7,8 +10,8 @@
 
 [class*="col-"], 
 [class*="cols-"]{
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: var(--col-gap);
+    padding-right: var(--col-gap);
     box-sizing: border-box;
 }
 .col-1{
