--- a/style/login.css
+++ b/style/login.css
@@ -32,7 +32,7 @@ body{
     opacity: 1;
     pointer-events: auto;
 }
-.forms.show-signup .form.show-signin{
+.forms.show-signup .form.signin{
     opacity: 0;
     pointer-events: none;
 }
